# datamasterv2

./: .dockerignore  .env.example  .env.vps.example  .gitignore  Dockerfile.dashboard  LICENSE  Makefile  docker-compose.vps.yaml  docker-compose.yaml  fraud_dashboard.pbix  gitactions.yaml  governanca.yaml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: deploy-aws.yml  deploy-azure.yml  deploy-kubernetes.yml  deploy-vps.yml
api-java/: Dockerfile  pom.xml
config/: medallion.yaml  prometheus.yml
config/grafana/: README.md
data-generator-console/: Dockerfile  package-lock.json  package.json  server.js
data-generator-console/public/: app.js  index.html  styles.css
docker/: spark-job-entrypoint.sh
docs/: .env.example  .env.vps.example  APRESENTACAO_BANCA.md  DEPLOYMENT.md  ESTUDO_BANCA.md  GUIA_APRESENTACAO_BANCA.md  LOCAL_SPARK.md  MONGODB_COMPASS.md  PROJETO_ESTRUTURADO.md  QUICK_START.md  README.md  SERVICOS_DOCKER.md  TERRAFORM_BANCA_MINIMO.md  TUTORIAL_AZURE_TERRAFORM_E_GITHUB_ACTIONS.md  cloud_comparison.md  requirements-demo.txt
docs/arquitetura/: .$datamaster-02-online-gateway.drawio.bkp  ARCHITECTURE.md  PROJETO_ESTRUTURADO.md  README.md  datamaster-00-visao-geral.drawio  datamaster-01-batch-medallion.drawio  datamaster-01-batch.drawio  datamaster-02-online-gateway.drawio  datamaster-02-online.drawio  datamaster-03-mapa.drawio  datamaster-04-docker-compose.drawio  datamaster-azure-aws-local.drawio
docs/cloud/: README.md  TUTORIAL_AZURE_TERRAFORM_E_GITHUB_ACTIONS.md
docs/contribuicao/: CONTRIBUTING.md  README.md
docs/dados/: README.md
docs/deploy/: CI_CD_BRANCHES.md  DEPLOY_K8S.md  DEPLOY_KUBERNETES_SERVIDOR.md  DEPLOY_VPS.md  GITHUB_ACTIONS_TAILSCALE.md  README.md  TAILSCALE_ACL_PASSO_A_PASSO.md
docs/examples/: github-actions-deploy-api-azure.yml
docs/observabilidade/: README.md
email-worker/: Dockerfile  pom.xml
infrastructure/: MAPA_LOCAL_AZURE.md
notebooks/: 01_dataprep_dq.py
portal/: Dockerfile  banca.html  index.html  roteiro.html
scripts/: batch_dataprep_mongo.py  bootstrap-kubernetes-server.sh  demo.sh  demo_full_stack.sh  demo_loop.sh  deploy-kubernetes-server.sh  generate_architecture_drawio.py  generate_data.py  init_mongo.js  k3s-import-app-images.sh  k8s-fix-jupyter-svc.sh  k8s-fix-pods.sh  k8s-reapply-infra.sh  k8s-recover-vps.sh  pre-banca-paralelo.sh  run_demo.sh  seed_postgres.sh  setup-k3s-deploy-permissions.sh  setup.ps1  setup.sh  spark_local_pipeline.py  status-stack.sh  sync-k8s-config.sh  up-local.sh  up-vps.sh
sql/: schema.sql
src/: __init__.py
(+125 files in other folders)
